--- a/ext/options.html
+++ b/ext/options.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset='utf-8'>
     <title>Vim Ratings Options</title>
+    <link href='/css/options.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <img alt='Logo' height='48' id='logo' src='/img/icon_48.png' width='48'>
     <h1>Vim Ratings Options</h1>
     <form id='options_form'>
       <table>
@@ -21,13 +23,13 @@
             <td>Rating</td>
             <td><input name='rMin' type='text'></td>
             <td><input name='rMax' type='text'></td>
-            <td>0</td>
+            <td></td>
           </tr>
           <tr>
             <td>Downloads</td>
             <td><input name='dlMin' type='text'></td>
             <td><input name='dlMax' type='text'></td>
-            <td>0</td>
+            <td></td>
           </tr>
           <tr>
             <td>Average Rating</td>
